<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="160dp"
    android:layout_width="match_parent"
    android:background="@drawable/street_background"
    android:padding="20dp">

    <ImageView
        android:src="@drawable/user_icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/side_user_icon" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_default_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_default_email"
        android:textColor="@color/white"
        />


</LinearLayout>